--- a/rmarkdown_chapters/Triumph_Run_report.Rmd
+++ b/rmarkdown_chapters/Triumph_Run_report.Rmd
@@ -13,166 +13,262 @@ text-align: justify}
 ```{r setup_triumph_run_report, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, 
                       eval = FALSE)
-knitr::opts_knit$set(root.dir = rprojroot::find_rstudio_root_file())
 ```
 
-This pipeline processes raw fastq files from microbiome data using the [Dada2](https://benjjneb.github.io/dada2/tutorial.html) R-package. At the end, it also produces a summary of the run. 
+```{r echo = FALSE, eval = TRUE}
+
+# Parameters
+parameters <- list("pipeline_name" = "triumph_microbiome_run")
+
+```
+
+This pipeline processes raw fastq files from microbiome data using the [Dada2](https://benjjneb.github.io/dada2/tutorial.html) R-package. At the end, it also produces a report summary of the run. 
 
 The pipeline has been tailor-made for the microbiome group at the RIVM, especifically for the Pienter project. It therefore expects the input that is normally generated there and might not be very flexible with sample names and metadata. I will try to explain what is expected from the input when necessary.
 
 ## Handbook
 
-**Important note:** this handbook is in continuous development, so please keep that in mind and contact [Alejandra Hernandez](alejandra.hernandez.segura@rivm.nl) if you wish to add/change something or if you need help with troubleshooting (please read the troubleshooting section first). 
-
 ### Requirements and preparation
 
-This handbook assumes that you are working at the “bioinformatica” environment at the RIVM. It is possible to run the pipeline in other settings and even on your laptop but you need extra steps that will not be enlisted here. 
+See the [General Instructions for all pipelines](#general-instructions) first.  
 
-- Placing of the data: Your demultiplexed fastq files should all be placed in one single folder (no subfolders) in the BioGrid (`/data/BioGrid/<my_folder>/<my_data>/`) or on the scratch_dir folder (`/mnt/scratch_dir/<my_folder>/<my_data>/`). I strongly advice you to place it on the scratch_dir “partition” and to only copy it to the BioGrid after the analysis. The run will be faster and therefore you will block the cluster less time for everyone else.  
+- Make sure that your files have the right format: they must have a fastq extension (.fastq, .fq, .fastq.gz or .fq.gz) and have specific names. The names should be only numbers (they can be preceded by 1 letter). The numbers should give information about the run and the sample. For instance, in the file name L002-026_R1.fastq.gz, it means that you are processing the sample 26 of the run # 2 of the "L" project. Moreover, the suffix '_R1' or '_R2' designate forward or reverse reads. The miseq sequencer normally adds an extra suffix _0001 to the names of the fastq files L002-026_R1_0001.fastq.gz. These suffix is no problem for the pipeline to work.  
 
-- Make sure that your folder has the right name: the folder that contains your data can have any name you want (however, the name of the folder will be considered the run name) provided that you only use letters, numbers or underscores. If your folder name contains different characters, it may not be recognized by the pipeline. IMPORTANT: Your folder name MUST NOT CONTAIN SPACES!!!!  
+- This pipeline needs a metadata (Excel file) should have a very specific format. For details about how to make the metadata file and what the codes mean, please consult with the microbiome team at the RIVM, especially Susana Fuentes. For the use of the pipeline, the main features that need to be added in this Excel file are:
+    + It should be an xlsx file (no csv).
+    + It should have at least a sheet called "amplicon_assay". The metadata file for the Triumph project includes many other sheets but this is the only one that is necessary. Leaving the sheet unnamed will not work even if the information inside the sheet is correctly formatted.  
+    + It should have at least three columns with the names: assay_sample, sample_indentifier and subject_identifier. 
+    + The assay_sample column should contain the "root" of the sample names that are used to name the fastq files (see previous point). For instance, the assay_sample code for the file L002-026_R1_0001.fastq.gz is L002-026.  
+    + The sample_identifier column should contain the identity of the samples. Here specific codes are needed for the control samples. For instance, every non-control sample is named something like S12345678 where "S" denotes that it is a sample belonging to a patient and the numbers are a unique ID for that sample. In contrast, the control samples don't have unique IDs. They are always named the same way. The accepted codes for the control samples can be found in the Table 1.
+    + The subject_identifier column contains the same code than sample_identifier and it is used as a back-up. When the codes in sample_identifier are not found, they are looked for instead in the subject_identifier column. 
 
-- Make sure that your files have the right format: they must have a fastq extension (.fastq, .fq, .fastq.gz or .fq.gz) and have specific names. The names should be only numbers (they can be preceded by 1 letter). The numbers should give information about the run and the sample. For instance, in the file name L002-026_R1.fastq.gz, it means that you are processing the sample 26 of the run # 2 of the "L" project. Moreover, the suffix '_R1' or '_R2' designate forward or reverse reads.
+
+```{r, echo = FALSE, eval = TRUE}
+accepted_control_codes_triumph <- data.frame("subject_identifier" = c("ZMCD",	
+                                                                        "ZMCB",
+                                                                        "AMCD",
+                                                                        "UMD",
+                                                                        "MSS",
+                                                                        "MSD",
+                                                                        "BD",
+                                                                        "BP",
+                                                                        "LSIC"),
+                                             "subject_description" = c("Zymo mock DNA", 
+                                                                        "Zymo mock Bacteria", 
+                                                                        "ATCC mock DNA", 
+                                                                        "UMCU low density mock DNA", 
+                                                                        "Mixed (fecal/NP/OP…) sample control", 
+                                                                        "Mixed (fecal/NP/OP…) sample control DNA", 
+                                                                        "Blank from DNA extraction", 
+                                                                        "Blank from PCR", 
+                                                                        "Library spike-in control"))
+                                                          
+knitr::kable(accepted_control_codes_triumph,
+             caption = "Table 1. Accepted subject_identifier codes for metadata used in the Triumph project.")
+```
 
 ### Download the pipeline   
 
-**THIS SECTION IS ONLY RUN THE FIRST TIME YOU USE THE PIPELINE OR EVERY TIME YOU HAVE TO UPDATE IT**  
+**YOU NEED TO DOWNLOAD THE PIPELINE ONCE OR EVERY TIME YOU WANT TO UPDATE IT**
 
-The pipeline should be downloaded in the same partition that your data is (BioGrid or scratch_dir). You can download it in two ways:  
-
-_Website_  
-
-1. Go to the website: https://gitl01-int-p.rivm.nl/hernanda/triumph_dada2_run_pipeline.git (Note: for now you need an invitation to be able to see the code. Once the pipeline is a bit more advanced in development, any RIVM member will have access to it).  
-2. Press the small white button with a cloud and a downwards arrow. In the dropdown menu, choose "Download zip".  
-3. A zip file (triumph_dada2_run_pipeline-master.zip) will have likely be downloaded on your “Downloads” folder. Please move this zip file to the BioGrid or the scratch_dir partitions, depending on where your data is.  
-4. Extract the files of the zip file. In Linux this is normally done by pressing the left button of the mouse, then “Open with Archive Manager” and then press “Extract” on the two windows that will consecutively appear. You could then delete the zip file.  
-
-
-_Command-line_   
-
-Any member of the RIVM has a (RIVM-specific) GitLab account. You can log in with the same creadentials that you use for accessing your workspaces.    
-
-1. Open the “terminal” (you could also open “terminator”) by going to the “Applications” menu of the linux environment.  
-2. Go to the location where you want to download the pipeline using the command ‘cd’. For instance:  
-
-```{bash}
-cd /mnt/scratch_dir/<my_folder>/
-```
-*Note: mind the slash at the beginning of the path
-
-3. Download the pipeline using the `git clone` command  
-
-```{bash}
-
-git clone https://gitl01-int-p.rivm.nl/hernanda/triumph_dada2_run_pipeline.git
-
-```
- You will be asked to give your credentials and then the (already unzipped) pipeline should have been downloaded in your current folder.
+Please follow the [instructions to download pipelines](#downloading-instructions) from the Juno team of the IDS-bioinformatics group. The `r parameters$pipeline_name` pipeline can be found in [this link](https://gitl01-int-p.rivm.nl/hernanda/triumph_dada2_run_pipeline.git).  
 
 ### Start the analysis. Basics
 
-Once you have the pipeline downloaded and placed in the right partition, you can start the analysis.  
+1. Open the terminal.  
 
-1. Open the terminal. You can go to the Linux menu called "Applications" and open the program "terminal" or the "terminator" one.   
-2. Enter the folder of the pipeline  
+2. Enter the folder of the pipeline:  
 
 ```{bash}
 cd /mnt/scratch_dir/<my_folder>/triumph_dada2_run_pipeline-master/
 ```
-* Exact name of downloaded folder might be slightly different depending on the version that was downloaded (e.g. -master might be something else).
+* Exact name of downloaded folder might be slightly different depending on the version that was downloaded.
 
 3. Run the pipeline  
 
 ```{bash}
-bash triumph_run_pipeline.sh -i /mnt/scratch_dir/<my_folder>/<my_data>/
+bash triumph_run_pipeline.sh -i /mnt/scratch_dir/<my_folder>/<my_last_run>/ --metadata /path/to/metadata.xlsx
 ```
 
-The pipeline should start running by itself and give you instructions. The first time you run the pipeline, the preparation might take longer than expected and it will need more input from you. Please read the instructions and answer when prompted. 
+### Run the pipeline changing default parameters
 
-The first thing that may happen is that you may get a message saying that:
+Many of the parameters of the dada2 package can be changed/used directly when calling the pipeline. If you want to do that, please refer to the help of the pipeline by using the command:
 
-```
-The master environment hasn't been installed yet, do you want to install this environment now? [y/n]
-```
-
-You just have to answer with a `y` as prompted. The installation will start by itself. If the installation takes very long (let's say around 30 min and it is still in a message saying "Solving environment..."), refer to the Troubleshooting section expecially to the part "Failure installing master environment".  
-
-In the next steps, many messages will appear on your screen. For instance, a run sheet will be generated, enlisting all the fastq files to be processed. Finally, the snakemake workflow (the actual pipeline) will run. Every time you download the pipeline again, many things have to be installed. Be patient! Especially, after snakemake has started, it will need to create many environments and this step might take some time. Please check regularly that the pipeline is running. Every time you will get yellow or green messages that tell you what is happening and that indicate that the pipeline is working as expected. You will see that every step or "rule" is being performed and a job is sent to the cluster. Snakemake will try to optimize the time by performing many steps simultaneously and inform you of the success/failure of every step. The failures will appear in red, but the pipeline might keep going to finsih all the steps that are possible. It regularly tells you how far it is (it gives a % of the steps that have been finished). 
-
-Once your pipeline is finished you should see some final messages informing you that 100% of the steps were finished and that a report was created. You will find your results inside a folder called `out/` inside the folder of the pipeline. For instance:  `/mnt/scratch_dir/<my_folder>/triumph_dada2_run_pipeline/out`. You can then move the data to any location you prefer. **Note:** You can also choose another output directory by specifying it when calling the pipeline:
-
-```{bash}
-# Default out/ folder
-bash triumph_run_pipeline.sh -i /mnt/scratch_dir/<my_folder>/<my_data>/
-
-# Custum output folder
-bash triumph_run_pipeline.sh -i /mnt/scratch_dir/<my_folder>/<my_data>/ -o /mnt/scratch_dir/<my_folder>/<my_results>/
+```{r}
+bash triumph_run_pipeline.sh -i /mnt/scratch_dir/<my_folder>/<my_last_run> --metadata /path/to/metadata.xlsx
 ```
 
-See the section Troubleshooting for any problems you may encounter. 
+It should pring something like this:
+
+```
+Usage: bash triumph_run_pipeline.sh -i <INPUT_DIR> <parameters>
+
+Input:
+
+  -i, --input [DIR]   This is the folder containing the input (demultiplexed)
+                      fastq files. This should be a folder for one single 
+                      run (sub-folder name will be considered the run name! 
+                      so give it a meaningul one). Default is the current folder.
+
+  --metadata [xlsx file] (optional) This is an optional parameter in which you 
+                                    provide an xlsx file with the metadata. 
+                                    For the exact format of this file, you should 
+                                    refer to the microbiome group at the RIVM  
+                                    (Susana Fuentes). In summary, it should 
+                                    contain a sheet called 'amplicon_assay', with
+                                    an empty row at the top (it does not need to 
+                                    be empty, but that row will be ignored) and
+                                    then a table with at least two columns: 
+                                    assay_sample and sample_identifier. The 
+                                    assay_sample should have the names coinciding 
+                                    with the fastq files (so, like the sample 
+                                    sheet used for demultiplexing) and the 
+                                    sample_identifier should contain either the
+                                    sample code or one of the codes for 
+                                    recognizing control samples (ask the microbiome group).
+
+
+Main Output (automatically generated):
+  out/                              Contains detailed intermediate files.
+  out/log/                          Contains all log files.
+  out/run_reports/                  Folder containint the actual reports of the
+                                    run (html file) and the summary table of the 
+                                    run (used to generate that report) as a csv file.
+
+Parameters:
+  -o, --output         Output directory. Default is 'out/'
+
+  --pienter-up        If this option is chosen, the default options for the 
+                      nasopharynx Triumph project will be used, which means 
+                      that truncLenF will be overwritten to 200 and the truncLenR 
+                      will be overwritten to 150.
+
+  -h, --help          Print this help document.
+
+  -sh, --snakemake-help Print the Snakemake this help document.
+
+  --clean (-y)        Removes output. (-y forces 'Yes' on all prompts)
+
+  -u, --unlock        Removes the lock on the working directory. This happens when
+                      a run ends abruptly and prevents you from doing subsequent
+                      analyses.
+
+  -n, --dry_run       Shows the process but does not actually run the pipeline.
+
+Dada2 parameters that can be changed in this pipeline (if you decide to be able
+to directly modify another parameter when you call the pipeline, contact me 
+alejandra.hernandez.segura@rivm.nl) for more details:
+
+  --trunQ             Minimumn quality for truncating a read (part of dada2 
+                      filtering). Default: 2
+
+  --truncLenF         Truncating length for forward reads(part of dada2 
+                      filtering). Default: 220
+
+  --truncLenR         Truncating length for reverse reads(part of dada2 
+                      filtering). Default: 100
+
+  --maxN              Maximum number of N bases accepted per read (part of dada2 
+                      filtering). Default: 0. Note that the dada2 requires this 
+                      parameter to be 0.
+
+  --maxEE             Maximum Expected Errors (part of dada2 filtering). 
+                      Default: 2
+
+  --nomatchID			    If this file is present, the reads will not be expected to
+                      match. The default is to expect filtered reads to have 
+                      matching IDs (part of dada2 filtering). Note that you should
+                      NOT put 'true' or 'false' after the flag. The flag itself 
+                      forces the condition to be FALSE
+
+  --nbases            Number of bases to use in order to learn the errors (part 
+                      of dada2 error learning). Default: 1e9
+
+  --minlen            Minimum length of the inferred SAVs. Any SAV shorter than 
+                      minlen will be discarded (part of dada2 inferring SAVs). 
+                      Default: 250
+
+  --maxlen            Maximum length of the inferred SAVs. Any SAV longer than 
+                      maxlen will be discarded (part of dada2 inferring SAVs). 
+                      Default: 256
+
+  --trainset			    Path to trainset used to assign taxonomy to a phyloseq object. 
+                      Dada2 suggests a database in its tutorial. In the RIVM, we have
+                      a copy stored at: '/mnt/db/triumph_taxonomy_db/silva_nr_v138_train_set.fa.gz'
+                      and this path is the default.
+
+  --species_db        Path to database used to assign species name to a phyloseq 
+                      object. Dada2 suggests a database in its tutorial. In the RIVM, 
+                      we have a copy stored at: '/mnt/db/triumph_taxonomy_db/silva_species_assignment_v138.fa.gz'
+                      and this path is the default.
+
+  --no-randomize-errors, -nr If this flag is present, there will not be randomiza-
+                      tion while learning the errors (part of dada2 learn errors). 
+                      The default is to randomize. Note that you should
+                      NOT put 'true' or 'false' after the flag. The flag itself 
+                      forces the condition to be FALSE
+
+  --just-concatenate  If this flag is present, the pairs will be simply concatenated.
+                      (part of dada2 mergePairs). The default is set to FALSE. Note 
+                      that you should NOT put 'true' or 'false' after the flag. The 
+                      flag itself forces the condition to be FALSE.
+
+  --bimera_method     Choose a method to remove bimeras (according to dada2 
+                      removeBimeraDenovo). 
+
+  --minboot           The minimum bootstrap confidence for assigning a taxonomic level
+                      (part of dada2 assignTaxonomy). Default: 80
+
+  --no-tryrc          If TRUE, the reverse-complement of each sequences will be 
+                      used for classification if it is a better match to the 
+                      reference sequences than the forward sequence. The default is
+                      TRUE. Note that you should
+                      NOT put 'true' or 'false' after the flag. The flag itself 
+                      forces the condition to be FALSE
+
+  --species-allowed   This is the number of species that may be enlisted (part of 
+                      dada2 addSpecies). Default is 3.
+```
+
+
+Please read the section [What to expect while running a Juno pipeline](#what-to-expect)
+
+See the section [General Troubleshooting](#general-troubleshooting) for any problems you may encounter. 
 
 **Note:** Do not keep all your data (including results) on the scratch_dir partition. You are allowed to keep 400GB max and with sequencing data, this can get full quite fast.
 
-#### Running when metadata is available
+#### Running when metadata is not available
 
-Since for now the metadata is only complete for few runs, the default behavior is to assume there is no metadata available. However, if you have metadata available in the form agreed with the Triumph project, it can be added to the report. The agreed format is an ".xlsx" file including a sheet called "amplicon_assay" that contains a table with at least the columns "assay_sample" and "sample_identifier", the latter using the agreed codes for control samples. IMPORTANT: the name of your metadata file can only contain numbers, letters, dashes and underscores. NO OHTER SPECIAL SYMBOLS AND NO SPACES ALLOWED!!
 
-You can then call the pipeline like this:
+You can also run the pipeline without the metadata:
 
 ```{bash}
-bash triumph_run_pipeline.sh -i /mnt/scratch_dir/<my_folder>/200915_Run10_GutTriumph/ --metadata /mnt/scratch_dir/<my_folder>/200915_Run10_GutTriumph/my_metadata.xlsx
+bash triumph_run_pipeline.sh -i /mnt/scratch_dir/<my_folder>/<my_last_run>/ 
 ```
 
-I highly recommend running the pipeline with metadata because the resulting report will be much more efficient. Moreover, it is necessary if you want to use the code for the Triumph Project Report (see next chapter).
+However, the report produced of such a run is not very informative and the code is not actively maintained. Therefore, the report might fail. The pipeline is not intended to be run without metadata so it will do its job but not efficiently.  
 
 ### Output 
 
-A folder called `out/`, inside the folder of the pipeline, will be created. If you chose another site for the output, then you will find the same results there. This folder will contain all the results and logging files of your analysis. There will be one folder with all the `filtered_fastq files`, one with the `plots` and one with the `RDS_files` generated when using the dada2 pipeline and one folder `run_reports` will have the html report with statistics of the run and the Project_SummaryTable.csv with all the statistics in a table format. There are also two important subfolders generated by this pipeline:
+A folder called `out/`, inside the folder of the pipeline, will be created. If you chose another site for the output, then you will find the same results there. This folder will contain all the results and logging files of your analysis. There will be one folder with all the `filtered_fastq files`, one with the `plots` and one with the `RDS_files` generated when using the dada2 pipeline and one folder `run_reports` will have the html report with statistics of the run and the Project_SummaryTable.csv with all the statistics in a table format. Please refer to the dada2 documentation to interpret your results.
 
-- The `out/log` folder contains a lot of information, including the snakemake_report.html that has a summary of all the analyses performed, the output generated and the software used. It also contains three sub-folders:  
-    1. The out/log/<project>/ folder contains information about every step performed for every sample. There you can find error messages or some information of what happened during each step. The messages are not always easy to interpret, but they often have clues on why a job/analysis failed. Sometimes the log files for each tool (and sample) are empty because either, there were no problems or messages generated on the run or because the problem lies before the job/analysis was even started. In the later case, you may want to look at the subfolder `out/log/drmaa/`.  
-    2. The `out/log/drmaa/` subfolder contains logging files of any job performed by the pipeline. Here it is not always easy to find the job you are looking for, but do know that they are there and they can be accessed if necessary. Note: if you chose a different output directory, the drmaa files will not be stored there. They will always be stored in `out/log/drmaa/` 
-    3. The `out/log/parameters/` subfolder contains 4 very important files for traceability of your samples. The `log_conda.txt` file contains information about the software that was necessary and that was contained in your environment. This means basically the software that would be needed to reproduce the same circumstances in which the pipeline was run and how it can be reproduced. The `log_config.txt` file is even more informative. It enlists all the parameters used to run the pipeline. In case months laters you forgot how you got the results you did or you just want to know some details about the analyses, they are all stored there.  
+*Note:* If you want your output to be stored in a folder with a different name or location, you can use the option `-o` ('o' from output) 
 
-- The `out/benchmark` folder contains information about the time and computer resources used for each step of the pipeline.  
+```{bash}
+bash triumph_run_pipeline.sh -i /mnt/scratch_dir/<my_folder>/<my_last_run>/ -o /mnt/scratch_dir/<my_folder>/<my_results>/
+```
+
+Another very important output from the pipeline are the logging files and audit trail that contain information of the software versions used, the parameters used, the error messages, etc. They could be important for you if you want to publish or reproduce the analysis at a later timepoint and also to get help from the bioinformatics team if you were to run into trouble with the pipeline. Please read about these files [here](#general-output). 
+
 
 ### Troubleshooting 
 
-#### Failure installing master environment
-
-Sometimes the installation does not work because of the settings of Linux. The installation always takes some minutes in which a message saying `Solving environment...` might appear on the screen. However, if this step takes too long (for instance 30 min or more) please abort the step by pressing `Ctrl + C` and/or `Ctrl + Z` and change the necessary settings: 
-
-```{bash}
-conda config --set channel_priority false
-```
-
-The try to run the pipeline and install the master environment again.  
-
-#### Failure to make a run sheet or to find input directory
-
-If this step fails and you get a message like: 
-
-```
-The input directory you specified INPUT_DIR exists but is empty or does not contain the expected input files...  
-Please specify a directory with input-data.
-```
-
-This message tells you that your folder does not exist. Please check that you put the right path to the folder with your data (`/mnt/scratch_dir/<my_folder>/<my_data>/`) when running the pipeline. Check that there are no typos or that you did not put the wrong name of your input folder. 
-
-```
-Couldn't find files in the input directory that ended up being in a .FASTQ, .FQ or .GZ format.  
-Please inspect the input directory INPUT_DIRECTORY and make sure the files are in one of the formats listed below:  
-    .fastq.gz (Zipped Fastq)  
-    .fq.gz (Zipped Fq)  
-    .fastq (Unzipped Fastq)  
-    .fq (unzipped Fq) 
-```
-    
-This message means that your directory exists but the files do not have the name that is expected. Please refer to requirements to make sure that your files and folder have the right name (right extension and right letters on the name).
+**Please read first the [General Troubleshooting](#general-troubleshooting) section!**
 
 #### Other problems or failing rules
 
-Snakemake and especially this pipeline are not perfect. Sometimes things fail. Before contacting me for help, please try to re-run the pipeline again and see if it goes further and the rules or the whole analysis can be completed or at least go further than before. If it does, please repeat that step (re-running the pipeline) until your analyis is finished and just inform me via e-mail so I can try to find the error later. If the pipeline does not go further or you get strange messages, try to DOWNLOAD THE PIPELINE AGAIN (so, start following this handbook from the beginning) just in case this issue was noted before and already solved in a new version of the pipeline. If nothing helps, please contact me and I will try to help you troubleshooting. 
+The `r parameters$pipeline_name` pipeline is still in development which means that sometimes things fail. Before contacting me for help, please try these steps:  
 
-**BEFORE CONTACTING ME READ THIS:**
-If you need to contact me, please attach to the email a copy the messages that appeared in your screen and look for the logging file (in the folder `out/log/`) that belongs to the step and the sample that failed (or at least one of them if there were multiple). If you cannot find the file or it is empty, look for the newest files with the extension `.out` or `.err` in the `out/log/drmaa/` folder. These files often contain error messages as well. Send the files to me or at least keep them at hand. Also, do not forget to mention where your code and data are located so I can have a look at them (if I have access).
+1. Re-run the pipeline again and see if it goes further. If it does, please keep re-running the pipeline until your analyis is finished or it just doesn't go further. Even if you are able to finish your analysis, just send me an email afterwards (see step 3) so I can check what happened.    
+2. Download the pipeline again and start from the beginning of this handbook. Sometimes the issue has been resolved in newer versions of the pipeline.
+3. Collect your logging files and contact me. Please inform me about bugs/errors via [e-mail](alejandra.hernandez.segura@rivm.nl) **sending also your `log` files and the path where I can find your input directory and the pipeline**. No screenshots are necessary. Note that if you do not send this information, I will not be able to help you and your and my work will be delayed.  
