--- a/rmarkdown_chapters/General_troubleshooting.Rmd
+++ b/rmarkdown_chapters/General_troubleshooting.Rmd
@@ -33,21 +33,10 @@ There are few reasons why this could happen:
 
 - Your input directory does nor contain the expected files, but they are instead in sub-folders. Most pipelines expect all input files to be together in one folder instead of scattered in sub-folders. The only exception is when you use output from a previous pipeline (for instance, Juno-assembly) into another pipeline. Please collect all your samples together in one folder.  
 
-## Failure to find metadata or other expected input  
-
-Finally, you could get an error associated to the metadata:
-
-```
-The provided species file <your_metadata_file.csv> does not exist. Please provide an existing file
-"If you used the option --make-metadata, please check that all the fasta files contain the .fasta extension and that the file names have the right abbreviations for genus/species
-```
-    
-This message means that either you provided the wrong path/name to your metadata file, that this has the wrong extension (not .csv) or that, if you used the option to `--make-metadata`, your input files do not have the right abbreviations. Please check the metadata file provided or the file names and try again.
-
 ## Other problems or failing rules  
 
 The Juno pipelines are still in development which means that sometimes things fail. **Before contacting me** for help, please try these steps:  
 
-1. Re-run the pipeline again and see if it goes further. If it does, please keep re-running the pipeline until your analyis is finished or it just doesn't go further. Even if you are able to finish your analysis, just send me an email afterwards (see step 3) so I can check what happened.    
+1. Re-run the pipeline again and see if it goes further. If it does, please keep re-running the pipeline until your analysis is finished or it just doesn't go further. Even if you are able to finish your analysis, just send me an email afterwards (see step 3) so I can check what happened.    
 2. Download the pipeline again and start from the beginning of this handbook. Sometimes the issue has been resolved in newer versions of the pipeline.
 3. Collect your logging files and contact me. Please inform me about bugs/errors via [e-mail](mailto:alejandra.hernandez.segura@rivm.nl) **sending also your `log` files and the path where I can find your input directory and the pipeline**. No screenshots are necessary. Note that if you do not send this information, I will not be able to help you and your and my work will be delayed.  
